# $Id$

2007-09-19	Konstantin V. Arkhipov

	* main/Net/Http/CurlHttpClient.class.php: isNoBody() -> hasNoBody().

2007-09-19	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveIdentifierList.class.php:
	always return array after import.

2007-09-19	Vladimir A. Altuchov

	* main/Net/Http/CurlHttpClient.class.php: no body response available.

2007-09-17	Sergey M. Skachkov

	* core/Form/Filter.class.php: upperCase() added.

2007-09-14	Dmitry E. Pismenny

	* main/Base/Range.class.php: intersects() added.

2007-09-07	Konstantin V. Arkhipov

	* main/Criteria/Projections/MappableObjectProjection.class.php:
	new projection for arbitrary mappable objects.

2007-09-06	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: arrayMergeUnique() renamed to
	mergeUnqie() + variable argument lists are acepted now.

2007-09-04	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: arrayMergeUnique() added.

	* main/Markup/Html/: minor stuff for coming parser.

2007-09-02	Konstantin V. Arkhipov

	* core/DB/DBPool.class.php: dropLink() now throws MissingElement
	instead of WrongArgument exception.

2007-08-29	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php: safeAmp() helps to avoid double
	encoding of html entities.

2007-08-27	Denis M. Gabaidulin

	* main/Flow/DebugPhpView.class.php: simple, but useful debug view.

2007-08-22	Anton E. Lebedevich

	* main/Flow/RedirectView.class.php: static create() added.

2007-08-20	Vladimir A. Altuchov

	* core/DB/DBPool.class.php: dropLink() added.

2007-08-17	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: hex2Binary() added.

	* main/Flow/HttpRequest.class.php: setGetVar() and setPostVar() added.

2007-08-15	Denis M. Gabaidulin

	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator filter
	was added. Bases on new HttpUrl parser.

2007-08-15	Anton E. Lebedevich

	*  main/Utils/Http/CurlHttpClient.class.php,
	main/Utils/Http/CurlHttpResponse.class.php: setMaxFileSize() added to
	limit download size.
